# Render

./: CMakeLists.txt
.runtime/: output.tga
include/: model.h
src/: main.cpp  model.cpp
